fix the website on mobile devices

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,5 @@
+@charset "UTF-8"
+
 // 色彩管理-----------------------
 $color_blue: #0345bd
 $color_light_blue: #c2d2ed
@@ -31,7 +33,7 @@ section
   padding: 50px 0px
 
 .container
-  padding: 0px 200px
+  padding: 0px 120px
 
 .jumbotron
   border-radius: 0px
@@ -112,7 +114,7 @@ section#section_team
   justify-content: center
   align-items: center
   font-weight: 700
-  padding-bottom: 20px
+  // padding-bottom: 20px
   & i
     color: $color_dark_blue
     font-size: 25px
@@ -161,6 +163,7 @@ footer.jumbotron
   & .btn
     position: absolute
     left: 50%
+    bottom: 20px
     transform: translateX(-50%)
   & .btn-success
     border: solid 1px $color_white
@@ -174,6 +177,7 @@ footer.jumbotron
   right: calc(100% - 350px)
   top: 0px
   width: 350px
+  height: 100%
   padding: 0px
   box-shadow: -20px 0px 40px $color_black
 .row-logo
@@ -188,9 +192,12 @@ footer.jumbotron
   width: 100%
   display: flex
   flex-direction: column
+  position: absolute
+  bottom: 0px
   background-color: white
   & a.col-theme-nav
-    padding: 32px
+    height: 90px
+    padding: 30px 32px
     text-decoration: none
     font-size: 20px
     color: $color_blue
@@ -200,11 +207,14 @@ footer.jumbotron
       background-color: $color_black
       color: $color_white
 
-@media screen and (max-width: 999px) and (min-width: 0px)
+@media screen and (max-width: 1024px) and (min-width: 0px)
   .page.right
     padding-left: 0px
     padding-right: 0px
     padding-top: 60px
+  .img_cover
+    & .explore
+      padding: 460px 0px 20px 0px
   .container
     padding: 0px 50px
   .navbar
@@ -218,7 +228,7 @@ footer.jumbotron
     &:before
       content: "看青"
       display: block
-      font-size: 24px
+      font-size: 20px
       padding: 5px 20px
       color: $color_blue
     & .row-logo
@@ -226,9 +236,11 @@ footer.jumbotron
     & .row-bottom
       width: auto
       flex-direction: row
+      position: relative
       right: 0px
       & a.col-theme-nav
-        font-size: 14px
+        height: auto
+        font-size: 12px
         padding: 5px 10px
         margin-right: 10px
         &:hover
